tests/ui/consts/offset_ub.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/offset_ub.rs:8:46
   |
LL | pub const BEFORE_START: *const u8 = unsafe { (&0u8 as *const u8).offset(-1) };
   |                                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ out-of-bounds pointer arithmetic: expected a pointer to the end of 1 byte of memory, but got ALLOC0 which is at the beginning of the allocation
   |
note: inside `std::ptr::const_ptr::<impl *const u8>::offset`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_ub.rs:9:43
   |
LL | pub const AFTER_END: *const u8 = unsafe { (&0u8 as *const u8).offset(2) };
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ out-of-bounds pointer arithmetic: expected a pointer to $BYTES bytes of memory, but got ALLOC1 which is only 1 byte from the end of the allocation
   |
note: inside `std::ptr::const_ptr::<impl *const u8>::offset`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_ub.rs:10:45
   |
LL | pub const AFTER_ARRAY: *const u8 = unsafe { [0u8; 100].as_ptr().offset(101) };
   |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ out-of-bounds pointer arithmetic: expected a pointer to $BYTES bytes of memory, but got ALLOC2 which is only $BYTES bytes from the end of the allocation
   |
note: inside `std::ptr::const_ptr::<impl *const u8>::offset`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_ub.rs:12:43
   |
LL | pub const OVERFLOW: *const u16 = unsafe { [0u16; 1].as_ptr().offset(isize::MAX) };
   |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overflowing pointer arithmetic: the total offset in bytes does not fit in an `isize`
   |
note: inside `std::ptr::const_ptr::<impl *const u16>::offset`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_ub.rs:13:44
   |
LL | pub const UNDERFLOW: *const u16 = unsafe { [0u16; 1].as_ptr().offset(isize::MIN) };
   |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overflowing pointer arithmetic: the total offset in bytes does not fit in an `isize`
   |
note: inside `std::ptr::const_ptr::<impl *const u16>::offset`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_ub.rs:14:56
   |
LL | pub const OVERFLOW_ADDRESS_SPACE: *const u8 = unsafe { (usize::MAX as *const u8).offset(2) };
   |                                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ out-of-bounds pointer arithmetic: expected a pointer to $BYTES bytes of memory, but got 0xf..f[noalloc] which is a dangling pointer (it has no provenance)
   |
note: inside `std::ptr::const_ptr::<impl *const u8>::offset`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_ub.rs:15:57
   |
LL | pub const UNDERFLOW_ADDRESS_SPACE: *const u8 = unsafe { (1 as *const u8).offset(-2) };
   |                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ out-of-bounds pointer arithmetic: expected a pointer to the end of $BYTES bytes of memory, but got 0x1[noalloc] which is a dangling pointer (it has no provenance)
   |
note: inside `std::ptr::const_ptr::<impl *const u8>::offset`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_ub.rs:16:49
   |
LL | pub const NEGATIVE_OFFSET: *const u8 = unsafe { [0u8; 1].as_ptr().wrapping_offset(-2).offset(-2) };
   |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ out-of-bounds pointer arithmetic: expected a pointer to the end of $BYTES bytes of memory, but got ALLOC3-0x2 which points to before the beginning of the allocation
   |
note: inside `std::ptr::const_ptr::<impl *const u8>::offset`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_ub.rs:18:50
   |
LL | pub const ZERO_SIZED_ALLOC: *const u8 = unsafe { [0u8; 0].as_ptr().offset(1) };
   |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^ out-of-bounds pointer arithmetic: expected a pointer to 1 byte of memory, but got ALLOC4 which is at or beyond the end of the allocation of size $BYTES bytes
   |
note: inside `std::ptr::const_ptr::<impl *const u8>::offset`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_ub.rs:19:42
   |
LL | pub const DANGLING: *const u8 = unsafe { ptr::NonNull::<u8>::dangling().as_ptr().offset(4) };
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ out-of-bounds pointer arithmetic: expected a pointer to $BYTES bytes of memory, but got 0x1[noalloc] which is a dangling pointer (it has no provenance)
   |
note: inside `std::ptr::mut_ptr::<impl *mut u8>::offset`
  --> $SRC_DIR/core/src/ptr/mut_ptr.rs:LL:COL

error[E0080]: evaluation of constant value failed
  --> $DIR/offset_ub.rs:22:47
   |
LL | pub const UNDERFLOW_ABS: *const u8 = unsafe { (usize::MAX as *const u8).offset(isize::MIN) };
   |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ out-of-bounds pointer arithmetic: expected a pointer to the end of $BYTES bytes of memory, but got 0xf..f[noalloc] which is a dangling pointer (it has no provenance)
   |
note: inside `std::ptr::const_ptr::<impl *const u8>::offset`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0080`.
